tests/NormalTests/paczka1/small_fuzzy/72626675.err
Error in line 3: VAjuZtxV S338 5,7
Error in line 10: VAjuZtxV A6 91,1
